# TCGBench

./: .gitignore  CMakeLists.txt  ClassDiragram.drawio  README.md  main.cpp
.github/ISSUE_TEMPLATE/: feature_request.md
Class/: Building.cpp  Building.h  BuildingLocation.cpp  BuildingLocation.h  Effect.h  Game.cpp  Game.h  Player.cpp  Player.h  Spell.cpp  Spell.h  Unit.cpp  Unit.h  UnitLocation.cpp  UnitLocation.h
Class/Utils/: DateTime.h
Documentation/: ClassDiagram.drawio  DuelView.drawio  GameDesign.docx  GuideLineGit.txt
Enum/: category.h  range.h  state.h  type.h
test/: main.cpp
test/Tests/: Unit.test.cpp
